@@ -383,6 +383,10 @@ changes to languages because of Phabricator reports.
   used instead.
 * The function wfShellWikiCmd() has been deprecated, use
   MediaWiki\Shell::makeScriptCommand().
+* Class CryptRand now always uses random_bytes() and thus its output is guaranteed
+  to be cryptographically secure. As a result, all its interface except for
+  generate() and generateHex() is deprecated.
+
 === Other changes in 1.31 ===
 * Browser support for Internet Explorer 10 was lowered from Grade A to Grade C.
 * Browser support for Opera 12 and older was dropped entirely. Opera 15+
